# care-o-bot

./: .gitmodules  .travis.install.sh  .travis.rosinstall  .travis.rosinstall.kinetic  .travis.rosinstall.melodic  .travis.script.sh  .travis.yml  Makefile  README  README.md  cturtle.rosinstall  hudson.sh  latest.rosinstall  makeconfig  setup.sh  showdeps
.github/workflows/: main.yml
care_o_bot/: CHANGELOG.rst  CMakeLists.txt  package.xml
care_o_bot_desktop/: CHANGELOG.rst  CMakeLists.txt  package.xml
care_o_bot_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
care_o_bot_simulation/: CHANGELOG.rst  CMakeLists.txt  package.xml
cob3_apps/cob3_dashboard/common/src/: folded.py  home.py  knoeppkes_actions.py  knoeppkes_buttons.py  simple_trajectory.py
cob3_arm/: manifest.xml
cob3_cameraSensors/: CMakeLists.txt  manifest.xml
cob3_cameraSensors/common/include/: AbstractColorCamera.h  AbstractRangeImagingSensor.h  GlobalDefines.h  LibCameraSensorsTypes.h  MathUtils.h  OpenCVUtils.h  ThreeDUtils.h
cob3_cameraSensors/ros/src/: cob3_cameraSensors_colorCamera_test.cpp  cob3_cameraSensors_swissRanger.cpp  cob3_cameraSensors_swissRanger_test.cpp
cob3_common/: stack.xml
cob3_common/canopen_motor/common/include/: CanDriveHarmonica.h  CanDriveItf.h  CanDummy.h  DriveParam.h  TimeStamp.h
cob3_common/canopen_motor/common/src/: CanDriveHarmonica.cpp  StrUtil.cpp  TimeStamp.cpp
cob3_common/cob_vision_utils/: CMakeLists.txt  manifest.xml
cob3_common/cob_vision_utils/common/src/: OpenCVUtils.cpp  ThreeDUtils.cpp
cob3_common/generic_can/: CMakeLists.txt  manifest.xml
cob3_common/generic_can/common/include/: CanItf.h  CanMsg.h  CanPeakSys.h  CanPeakSysUSB.h
cob3_common/generic_can/common/src/: CanPeakSys.cpp  CanPeakSysUSB.cpp
cob3_common/inifiles_old/: CMakeLists.txt  manifest.xml
cob3_common/inifiles_old/common/include/: IniFile.h
cob3_common/inifiles_old/common/src/: IniFile.cpp
cob3_common/ros_common/: empty_node.cpp  empty_node_class.cpp
cob3_common/ros_common/cob3_msgs/: manifest.xml
cob3_common/ros_common/cob3_srvs/: manifest.xml
cob3_driver/: cob3_slam.launch  rosdep.yaml  stack.xml
cob3_driver/base_drive_chain/: manifest.xml
cob3_driver/base_drive_chain/common/src/: CanCtrlPltfCOb3.cpp
cob3_driver/base_drive_chain/ros/src/: base_drive_chain.cpp
cob3_driver/cob3_arm/: CMakeLists.txt  manifest.xml
cob3_driver/cob3_arm/ros/src/: simple_trajectory.cpp  simple_trajectory.py
cob3_driver/cob3_arm_ik/: CMakeLists.txt  manifest.xml
cob3_driver/cob3_arm_ik/ros/launch/: cob3_arm_ik_node.launch
cob3_driver/cob3_arm_ik/ros/src/: cob3_arm_ik.cpp  (+4 more)
cob3_driver/cob3_cameraSensors/: CMakeLists.txt  manifest.xml
cob3_driver/cob3_cameraSensors/common/include/: AVTPikeCam.h  AbstractColorCamera.h  AbstractRangeImagingSensor.h  CameraSensorToolbox.h  MathUtils.h  SR31.h  VirtualRangeCam.h  tinyxml.h
cob3_driver/cob3_cameraSensors/common/src/: AbstractRangeImagingSensor.cpp  OpenCVUtils.cpp  VirtualColorCam.cpp
cob3_driver/cob3_cameraSensors/ros/src/: cob3_cameraSensors_colorCamera.cpp  cob3_cameraSensors_colorCamera_test.cpp  cob3_cameraSensors_swissRanger.cpp  cob3_cameraSensors_swissRanger_test.cpp
cob3_driver/cob3_camera_sensors/: CMakeLists.txt
cob3_driver/cob3_camera_sensors/common/include/cob3_camera_sensors/: AVTPikeCam.h  AbstractColorCamera.h  AbstractRangeImagingSensor.h  CameraSensorToolbox.h  GlobalDefines.h  LibCameraSensorsTypes.h  MathUtils.h  OpenCVUtils.h  SR31.h  ThreeDUtils.h  VirtualColorCam.h  VirtualRangeCam.h
cob3_driver/cob3_camera_sensors/common/src/: AVTPikeCam.cpp  AbstractColorCamera.cpp  AbstractRangeImagingSensor.cpp  CameraSensorToolbox.cpp  MathUtils.cpp  OpenCVUtils.cpp  SR31.cpp  VirtualColorCam.cpp  VirtualRangeCam.cpp
cob3_driver/cob3_camera_sensors/ros/src/: swiss_ranger.cpp
cob3_driver/cob3_hokuyo/: manifest.xml
cob3_driver/cob3_platform/: CMakeLists.txt  manifest.xml
cob3_driver/cob3_teleop/: manifest.xml
cob3_driver/cob3_test/: cob3_slam.launch  ipa-10cm.yaml  ipa.world  manifest.xml  move_base_stage_amcl.launch
cob3_driver/cob3_tf_broadcaster/: manifest.xml
cob3_driver/cob_camera_sensors/: CMakeLists.txt  manifest.xml
cob3_driver/libCameraSensors/: CMakeLists.txt  manifest.xml
cob3_driver/libpcan/: manifest.xml
cob3_driver/powercube_chain/: manifest.xml  orocos.mk
cob3_driver/ros_common/: empty_node.cpp
cob3_driver/sdh/: CMakeLists.txt  manifest.xml
cob3_driver/sickS300/: manifest.xml
cob3_extern/: stack.xml
cob3_extern/libm5api/: manifest.xml
cob3_extern/libmesasr/: Makefile  manifest.xml
cob3_extern/libntcan/: manifest.xml
cob3_extern/libpcan/: Makefile  manifest.xml
cob3_extern/libwm4/: Makefile  manifest.xml
cob3_platform/: CMakeLists.txt  manifest.xml
cob3_platform/common/include/: PlatformHardware.h
cob3_platform/ros/src/: cob3_platform.cpp  cob3_platform_sim.cpp  cob3_platform_test.cpp
cob3_simulation/: stack.xml
cob3_simulation/cob3_defs/: manifest.xml
cob3_simulation/cob3_gazebo/: manifest.xml
cob3_simulation/cob3_ogre/: CMakeLists.txt  manifest.xml
libmesasr/: Makefile  manifest.xml
libpcan/: Makefile  manifest.xml
libwm4/: Makefile  manifest.xml
powercube_chain/: CMakeLists.txt  manifest.xml
powercube_chain/common/: PowerCubeCtrl.cpp  moveCommand.cpp  moveCommand.h  simulatedArm.cpp  simulatedArm.h
powercube_chain/common/include/: TimeStamp.h
powercube_chain/common/src/: TimeStamp.cpp  common.cpp  simulatedMotor.cpp
powercube_chain/orocos/: PowerCubeCtrl_OROCOS.cpp
powercube_chain/orocos/src/: PowerCubeSim_OROCOS.cpp
powercube_chain/ros/src/: powercube_chain.cpp  powercube_chain_test.cpp
ros_common/: empty_node_class.cpp
ros_common/cob3_msgs/: CMakeLists.txt
ros_common/cob3_msgs/msg/: ActuatorState.msg
ros_common/cob3_srvs/: manifest.xml
ros_common/cob3_srvs/srv/: SetOperationMode.srv
sdh/: CMakeLists.txt  manifest.xml
sdh/common/include/: dbg.h
sdh/ros/src/: sdh.cpp
sickS300/: CMakeLists.txt
sickS300/common/src/: ScannerSickS300.cpp  SerialIO.cpp
sickS300/ros/src/: sickS300.cpp  sickS300_test.cpp
(+128 files in other folders)
