<?xml version="1.0"?>
<package>
  <name>care_o_bot</name>
  <version>0.6.3</version>
  <description>The care-o-bot meta-package</description>
  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/ipa320/care-o-bot</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>care_o_bot_robot</run_depend>
  <run_depend>care_o_bot_simulation</run_depend>
  <run_depend>cob_navigation</run_depend>
  <run_depend>cob_manipulation</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
