<?xml version="1.0"?>
<package format="2">
  <name>care_o_bot</name>
  <version>0.6.6</version>
  <description>The care-o-bot meta-package</description>
  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>
  <license>Apache 2.0</license>

  <url type="repository">https://github.com/ipa320/care-o-bot</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>care_o_bot_robot</exec_depend>
  <exec_depend>care_o_bot_simulation</exec_depend>
  <exec_depend>cob_navigation</exec_depend>
  <exec_depend>cob_manipulation</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
