<?xml version="1.0"?>
<package format="2">
  <name>care_o_bot_robot</name>
  <version>0.6.3</version>
  <description>The care-o-bot-robot meta-package</description>
  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/ipa320/care-o-bot</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>cob_extern</exec_depend>
  <exec_depend>cob_common</exec_depend>
  <exec_depend>cob_calibration_data</exec_depend>
  <exec_depend>cob_environments</exec_depend>
  <exec_depend>cob_substitute</exec_depend>
  <exec_depend>cob_driver</exec_depend>
  <exec_depend>schunk_modular_robotics</exec_depend>
  <exec_depend>ros_canopen</exec_depend>
  <exec_depend>cob_control</exec_depend>
  <exec_depend>cob_command_tools</exec_depend>
  <exec_depend>cob_robots</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
