<?xml version="1.0"?>
<package format="2">
  <name>care_o_bot_robot</name>
  <version>0.6.6</version>
  <description>The care-o-bot-robot meta-package</description>
  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>
  <license>Apache 2.0</license>

  <url type="repository">https://github.com/ipa320/care-o-bot</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>cob_bringup</exec_depend>
  <exec_depend>cob_manipulation</exec_depend>
  <exec_depend>cob_navigation</exec_depend>
  <exec_depend>htop</exec_depend>
  <exec_depend>openssh-server</exec_depend>
  <exec_depend>python-wstool</exec_depend>
  <exec_depend>robot_upstart</exec_depend>
  <exec_depend>tmux</exec_depend>
  <exec_depend>tree</exec_depend>
  <exec_depend>vim</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
