<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>care_o_bot_robot</name>
  <version>0.7.11</version>
  <description>The care-o-bot-robot meta-package</description>
  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>
  <license>Apache 2.0</license>

  <url type="repository">https://github.com/ipa320/care-o-bot</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>cob_bringup</exec_depend>
  <exec_depend>cob_manipulation</exec_depend>
  <exec_depend>cob_navigation</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
